--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body>
         <div id="checkers"></div>
         <div id="movement-state"></div>
+        <a href="https://github.com/FI-Mihej/English-Checkers-Web-App">Code On GitHub</a>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="lg_checkers.js" type="text/javascript"></script>
