--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
     <link rel="stylesheet" href="checkers.css">
     <body>
-        <div id="checkers"></div>
+        <h1>English Checkers made with ClojureScript</h1>
+        <a href="https://github.com/FI-Mihej/English-Checkers-Web-App">Source Code On GitHub</a>
+        <ul>
+            <li>Make your move and click around to increment "Mouse clicks" counter <b>while</b> AI is thinking about it's movement (there is a timer for 2 seconds delay made for "hard thinking" process emulation).</li>
+            <li>Only green squares are "clickable"</li>
+            <li>You can check or uncheck your piece by clicking on it.</li>
+            <li>You can do serial capture moves without re-checking your piece.</li>
+            <li>Check other English Checkers rules on <a href="https://en.wikipedia.org/wiki/English_draughts">Wikipedia</a>.</li>
+        </ul>
         <div id="movement-state"></div>
-        <a href="https://github.com/FI-Mihej/English-Checkers-Web-App">Code On GitHub</a>
+        <div id="checkers"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="lg_checkers.js" type="text/javascript"></script>
