--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <link rel="stylesheet" href="checkers.css">
+    <link rel="stylesheet" href="toggle_switch.css">
+    <link rel="stylesheet" href="ui_general.css">
     <body>
-        <h1>English Checkers made with ClojureScript</h1>
+        <h1>English Checkers made with ClojureScript and React</h1>
         <a href="https://github.com/FI-Mihej/English-Checkers-Web-App">Source Code On GitHub</a>
         <ul>
             <li>Make your move and click around to increment "Mouse clicks" counter <b>while</b> AI is thinking about it's movement (there is a timer for 2 seconds delay made for "hard thinking" process emulation).</li>
@@ -10,8 +12,10 @@
             <li>You can do serial capture moves without re-checking your piece.</li>
             <li>Check other English Checkers rules on <a href="https://en.wikipedia.org/wiki/English_draughts">Wikipedia</a>.</li>
         </ul>
-        <div id="movement-state"></div>
-        <div id="checkers"></div>
+        <br>
+        <div id="app-interface"></div>
+        <div id="app-state"></div>
+        <div id="checkerboard"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="lg_checkers.js" type="text/javascript"></script>
