--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <link rel="stylesheet" href="toggle_switch.css">
     <link rel="stylesheet" href="ui_general.css">
     <body>
-        <h1>English Checkers made with ClojureScript and React</h1>
+        <h1>English Checkers made with ClojureScript <br>
+            and React</h1>
         <a href="https://github.com/FI-Mihej/English-Checkers-Web-App">Source Code On GitHub</a>
         <ul>
-            <li>Make your move and click around to increment "Mouse clicks" counter <b>while</b> AI is thinking about it's movement (there is a timer for 2 seconds delay made for "hard thinking" process emulation).</li>
+            <li>Make your move and click around to increment "Mouse clicks" <br> 
+                counter <b>while</b> AI is thinking about it's movement (there is <br>
+                a timer for 2 seconds delay made for "hard thinking" process emulation).</li>
             <li>Only green squares are "clickable"</li>
             <li>You can check or uncheck your piece by clicking on it.</li>
             <li>You can do serial capture moves without re-checking your piece.</li>
