--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div id="app-interface"></div>
         <div id="app-state"></div>
         <div id="checkerboard"></div>
+        <div id="footer"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="lg_checkers.js" type="text/javascript"></script>
