--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>English Checkers</title>
-        <!--<link rel="stylesheet" href="reset.css">-->
+        <!--<link rel="stylesheet" href="css/reset.css">-->
         <!--<link rel="stylesheet" type="text/css" href="https://yui-s.yahooapis.com/2.9.0/build/reset/reset-min.css">-->
-        <link rel="stylesheet" href="checkers.css">
-        <link rel="stylesheet" href="ui_general.css">
+        <link rel="stylesheet" href="css/checkers.css">
+        <link rel="stylesheet" href="css/ui_general.css">
     </head>
     <body>
         <h1 class="align-h-center-w-bottom">English Checkers made with ClojureScript <br>
@@ -56,7 +56,7 @@
         <div id="footer" class="heigth100percent"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
-        <script src="lg_checkers.js" type="text/javascript"></script>
+        <script src="js/compiled/lg_checkers.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("lg_checkers.core");</script>
     </body>
 </html>
