--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -38,7 +38,7 @@
                     <li>Crowned pieces may thereafter move and capture <br>
                     both backward and forward.</li>
                     <li>Multiple jumps are possible, if after one jump, <br>
-                    another piece is immediately eligible to be jumped—even <br>
+                    another piece is immediately eligible to be jumped - even <br>
                     if that jump is in a different diagonal direction.</li>
                     <li>Only the green squares of the checkered board are used.</li>
                     <li>Check other English Checkers rules on <a href="https://en.wikipedia.org/wiki/English_draughts">Wikipedia</a>.</li>
