--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="footer" class="heigth100percent"></div>
         <script src="http://fb.me/react-0.11.1.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
-        <script src="js/compiled/lg_checkers.js" type="text/javascript"></script>
-        <script type="text/javascript">goog.require("lg_checkers.core");</script>
+        <script src="js/compiled/checkers.js" type="text/javascript"></script>
+        <script type="text/javascript">goog.require("checkers.core");</script>
     </body>
 </html>
